# multiRobotController

./: .gitattributes  .gitignore  AddressMap.json  CMakeLists.txt  README.md
.githooks/: pre-commit
doc/: README_handshake.md
src/app/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/app/widgets/: MotorPanel.cpp  MotorPanel.h  RobotPanel.cpp  RobotPanel.h
src/core/Motor/Com/: modbus.cpp  modbus.h
src/core/Motor/Leadshine/: Eld2Bus.cpp  Eld2Bus.h  Eld2Conveyor.cpp  Eld2Conveyor.h  Eld2Gantry.cpp  Eld2Gantry.h  eld2.cpp  eld2.h  parameter.cpp  parameter.h
src/core/Motor/Port/: serialport.cpp  serialport.h
src/core/Widgets/: motorconfig.cpp  motorconfig.h  motorconfig.ui  motorconnect.cpp  motorconnect.h  motorconnect.ui  motorposition.cpp  motorposition.h  motorposition.ui  motortest.cpp  motortest.h  motortest.ui
src/core/common/: LogLevel.h  RobotCommand.h  RobotCommandParser.cpp  RobotCommandParser.h  RobotCommandSerializer.cpp  RobotCommandSerializer.h  convert.h
src/core/modbus/: ModbusClient.cpp  ModbusClient.h
src/core/models/: PickListModel.cpp  PickListModel.h  Pose6D.h
src/core/network/: Server.cpp  Server.h  convertToByte.cpp
src/core/orchestrator/: Orchestrator.cpp  Orchestrator.h
src/core/robots/: GentryManager.cpp  GentryManager.h  RobotCommandQueue.h  RobotManager.cpp  RobotManager.h
src/core/tf/: EndEffectorOrientation.cpp  EndEffectorOrientation.h  EulerAngleConverter.cpp  EulerAngleConverter.h  RobotPoseValidator.h
src/core/vision/: VisionClient.cpp  VisionClient.h  VisionServer - 복사본.h  VisionServer.cpp  VisionServer.h
src/resources/: AddressMap_A.json  AddressMap_B.json  poses_A.csv  poses_B.csv  resources.qrc  robots.json
tmp/: log_251214.txt  log_251215.txt  log_251216.txt  log_260107.txt  log_260108.txt  log_260109.txt  log_260112.txt  log_260113.txt  log_260114.txt  log_260115.txt  log_260116.txt
tools/: validate_address_map_v2.py  validate_address_map_win.py
